- Update the paper-input-autocomplete-chips using the new version with the fixes - Added a usage example of the component

--- a/bower.json
+++ b/bower.json
@@ -33,6 +33,7 @@
     "paper-menu-button": "PolymerElements/paper-menu-button#^1.0.4",
     "paper-item": "PolymerElements/paper-item#^1.1.3",
     "paper-input": "PolymerElements/paper-input#^1.1.5",
-    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^1.0.10"
+    "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^1.0.10",
+    "paper-input-autocomplete-chips": "git@github.com:WebPaperElements/paper-input-autocomplete-chips.git#^0.22.6"
   }
 }
